--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,17 @@ version: '3.1'
 services:
 
   mongo:
-    image: mongo
-    container_name: mongodb
+    image: mongo:latest
+    container_name: mongodb-library
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: mongopwd
+    volumes:
+      - ./scripts/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
 
   websvr:
     build: ./work
-    container_name: web4mongo
+    container_name: web4mongo-library
     volumes:  
       - ./work/app:/var/www/html
     ports:
@@ -21,13 +23,13 @@ services:
     depends_on:
       - mongo
     environment:
-      MONGODB_USERNAME: admin
-      MONGODB_PASSWORD: pass
+      MONGODB_USERNAME: root
+      MONGODB_PASSWORD: mongopwd
       MONGODB_DB: Biblioteca
 
   mongo-express:
-    image: mongo-express
-    container_name: mongoex
+    image: mongo-express:latest
+    container_name: mongoex-library
     ports:
       - 8081:8081     
     environment:
